# NitroCPPTest-GQuilty

./: README.md
include/: NitroCPP.h  json.hpp
src/: NitroCppTest-GavinQuilty.cpp  Source.cpp  stdafx.cpp
tests/: NitroCppTest-GavinQuilty.cpp  NitroCppTest-GavinQuilty_TESTS.cpp  catch.hpp
utils/: CMakeLists.txt  rect1.json  rect10.json  rectError.json
